--- a/nodejs/ninja/package.json
+++ b/nodejs/ninja/package.json
@@ -1,7 +1,20 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "ninja",
+  "version": "1.0.0",
+  "main": "app.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
