--- a/Blockchain/travis/contract/package.json
+++ b/Blockchain/travis/contract/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.2"
+    "@openzeppelin/contracts": "^4.9.3",
+    "chai": "^4.3.8",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.17.2",
+    "mocha": "^10.2.0"
   }
 }
